--- a/CNN_Martin.ipynb
+++ b/CNN_Martin.ipynb
@@ -151,24 +151,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<numpy.lib.npyio.NpzFile at 0x187b2d65b20>"
+       "(3000, 256, 256)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = np.load('data_codingset_sublists.npz')\n",
+    "data = np.load('data_codingset_onelist.npz')\n",
     "\n",
-    "data"
+    "data['data'].shape"
    ]
   }
  ],
