--- a/CNN_Martin.ipynb
+++ b/CNN_Martin.ipynb
@@ -170,6 +170,84 @@
     "\n",
     "data['data'].shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scale data and separate it into train, val and test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inspect data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "# This layer creates a convolution kernel that is convolved with the layer input \n",
+    "# to produce a tensor of outputs.\n",
+    "# When using this l\n",
+    "# Layer as the first layer in a model, provide the keyword argument\n",
+    "# input_shape\n",
+    "# Same in padding means zero padding evenly to left/right and up/down \n",
+    "model.add(Conv2D(filters=32,\n",
+    "                 kernel_size=3,\n",
+    "                 strides=1,\n",
+    "                 padding='same',\n",
+    "                 activation='relu',\n",
+    "                 input_shape=(img_rows, img_cols, 1)))\n",
+    "# Downsamples the input along its spatial dimensions (height and width) by taking\n",
+    "# the maximum value over an input window (of size defined by pool_size) for each\n",
+    "# channel of the input. The window is shifted by strides along each dimension.\n",
+    "model.add(MaxPooling2D(pool_size=2, strides=None))\n",
+    "\n",
+    "model.add(Conv2D(filters=64,\n",
+    "                 kernel_size=3,\n",
+    "                 strides=1,\n",
+    "                 padding='same',\n",
+    "                 activation='relu'))\n",
+    "\n",
+    "model.add(MaxPooling2D(pool_size=2, strides=None))\n",
+    "\n",
+    "model.add(Dropout(rate=0.40))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "\n",
+    "model.add(Dense(units=128, activation='relu'))\n",
+    "\n",
+    "model.add(Dense(units=num_classes, activation='softmax'))\n",
+    "\n",
+    "model.summary()"
+   ]
   }
  ],
  "metadata": {
