--- a/data_conversion.ipynb
+++ b/data_conversion.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,23 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 0. ... 2. 2. 2.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = np.vstack((data_camp, data_cory, data_dust, data_grim, data_qro, data_qsu))\n",
     "\n",
     "data_ash = np.vstack((data_camp, data_grim)) \n",
     "\n",
     "data_pollen = np.vstack((data_cory, data_qro, data_qsu))\n",
+    "\n",
     "\n",
     "files = files1+files2+files3+files4+files5+files6\n",
     "\n",
@@ -170,13 +163,15 @@
     "    for n in range(len(files)):\n",
     "        names.append(path[i]+str(n))\n",
     "\n",
-    "label_ash = np.concatenate((np.zeros((1,500)), np.ones((1,500))), axis=1)  \n",
-    "label_pollen = np.concatenate((np.zeros((1,500)), np.ones((1,500)), np.full((1,500), 2)), axis=1)\n",
+    "label_ash = np.zeros((1,len(data_ash)),dtype=int)\n",
+    "label_pollen = np.ones((1,len(data_pollen)),dtype=int)\n",
+    "label_dust = np.ones((1,len(data_dust)),dtype=int)*int(2)\n",
     "\n",
     "#mapping = dict(names)\n",
     "        \n",
     "np.savez_compressed('data_codingset_ash.npz', data_ash=data_ash, label=label_ash)\n",
-    "np.savez_compressed('data_codingset_pollen.npz', data_pollen=data_pollen, label=label_pollen)"
+    "np.savez_compressed('data_codingset_pollen.npz', data_pollen=data_pollen, label=label_pollen)\n",
+    "np.savez_compressed('data_codingset_dust.npz', data_dust=data_dust, label=label_dust)"
    ]
   },
   {
@@ -203,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
