--- a/CNN_MNIST_subtypes_pca.ipynb
+++ b/CNN_MNIST_subtypes_pca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -52,12 +52,13 @@
      "output_type": "stream",
      "text": [
       "(1000, 256, 256)\n",
-      "(100, 256, 256)\n"
+      "(100, 256, 256)\n",
+      "(1000,)\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "MetaData = pd.read_csv(\"./train/train.csv\")\n",
     "data = np.load('data_codingset_ash.npz')\n",
     "data2 = np.load('data_codingset_pollen.npz')\n",
     "\n",
@@ -65,16 +66,23 @@
     "\n",
     "#print(data['label'])\n",
     "data_ash = np.array(data['data_ash'])\n",
+    "meta_ash = MetaData['Area (ABD)'][MetaData['camp']==1][:500].values\n",
+    "meta_ash = np.hstack((  meta_ash  ,  MetaData['Area (ABD)'][MetaData['grim']==1][:500].values  ))\n",
+    "\n",
     "label = np.array(data['label'])[0]\n",
     "\n",
     "data_pollen = np.array( data2['data_pollen'][:100] )\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "#print(np.array(data['label'])[0])\n",
     "\n",
     "print(data_ash.shape)\n",
     "print(data_pollen.shape)\n",
     "\n",
-    "#plt.imshow(val_images[0])"
+    "#plt.imshow(val_images[0])\n",
+    "print(meta_ash.shape)"
    ]
   },
   {
