--- a/data_conversion_WithMetaData.ipynb
+++ b/data_conversion_WithMetaData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "[500 rows x 39 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,6 +583,7 @@
     "\n",
     "\n",
     "data_pollen = np.vstack((data_cory, data_qro, data_qsu))\n",
+    "metadata_pollen = np.vstack(( MetaData[1], MetaData[4], MetaData[5] ))\n",
     "\n",
     "files = files1+files2+files3+files4+files5+files6\n",
     "\n",
@@ -600,12 +601,12 @@
     "        \n",
     "\n",
     "np.savez_compressed('data_codingset_ash.npz', data_ash=data_ash, label=label_ash, metadata_ash = metadata_ash)\n",
-    "np.savez_compressed('data_codingset_pollen.npz', data_pollen=data_pollen, label=label_pollen)"
+    "np.savez_compressed('data_codingset_pollen.npz', data_pollen=data_pollen, label=label_pollen, metadata_pollen = metadata_pollen )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +615,7 @@
        "(1000, 39)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +635,7 @@
        "(1000, 256, 256)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +655,7 @@
        "(1, 1000)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
